Agrega gesturas y seccion 2
Signed-off-by: Juan Pablo Menichetti <jpmenichetti@sisdef.cl>

--- a/www/seccion_2.html
+++ b/www/seccion_2.html
@@ -1,2 +1,195 @@
+<!DOCTYPE html>
 
-CICLO DE PROGRAMA
+<html>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=3, minimum-scale=1, width=device-width" />
+    <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <title>Ser Guía y Subguía de Patrulla</title>
+</head>
+
+<body class="seccion2">
+    <script type="text/javascript" src="js/hammer.min.js"></script>
+    <script type="text/javascript" src="js/gestures.js"></script>
+	<img class="title_img" src="img/img_seccion_2.png"/>
+	<div id="full_content">
+	<p class="content">
+		Lo que más nos gusta de ser guías y scouts es tener aventuras increíbles con nuestro grupo 
+		de amigas o amigos. Pero para tener estas aventuras no basta con que las soñemos, tenemos que 
+		prepararlas, y no de cualquier manera, tenemos que prepararlas tomando en cuenta las opiniones 
+		de todas y todos.
+	</p>
+	<p class="content">
+		Es por eso que en  nuestra Unidad, le decimos <span class="importante2">Ciclo de Programa</span>
+		a la organización y desarrollo de <span class="importante2">todas nuestras actividades</span> por 
+		un tiempo específico, a lo que pasa antes, durante y después de que las hagamos. Ahora revisaremos 
+		cada una de estas instancias (antes, durante y después), veremos cómo realizamos las actividades 
+		de Patrulla y de Unidad y conoceremos algunos consejos para que nuestras actividades resulten increíbles.
+	</p>
+	<a name="seccion_2_2"></a>
+	<p class="content">
+	<img class="title_img" src="img/img_seccion_2_1.png"/>
+	</p>
+	<div class="intro2">
+		Soñando y organizando nuestras actividades
+	</div>
+	<p class="content">
+		Previamente a pensar las actividades que vamos a realizar, tenemos que identificar junto a 
+		nuestras Patrullas cómo estamos, qué cosas hemos hecho, cuáles son nuestras debilidades y fortalezas 
+		y qué podríamos hacer para mejorar y vivir nuevas aventuras. También, podemos hacernos estas mismas 
+		preguntas sobre la Unidad para aportarlas luego en el Consejo y la Asamblea de Unidad. 
+		Antes de realizar las actividades tendremos siempre al menos un Consejo y una Asamblea de Unidad.
+	</p>
+	<p class="content">
+		En el <span class="importante2">Consejo de Unidad</span>, junto con guías y subguías de las otras Patrullas, conversaremos sobre 
+		lo que ha dicho cada Patrulla y qué fortalezas y debilidades han percibido de la Unidad. También 
+		decidiremos en qué nos enfocaremos durante este Ciclo,  lo que nos ayudará a tener un gran 
+		objetivo a lograr y, de esta manera  ir mejorando poco a poco nuestra Unidad, así como también, 
+		para crecer y mejorar como guías y scouts. Además, el tener algo en qué enfocarnos nos permitirá 
+		evaluar cómo resultó nuestro ciclo de actividades al final de éste, ya que podremos saber con 
+		facilidad si logramos nuestra meta o no. El primer consejo para guías y subguías es ese:
+	</p>
+	<p class="content">
+		<span class="importante2"><b>¡Enfoquémonos en pocas cosas a la vez, una o dos ideas centrales por ciclo, 
+		y así podremos lograrlo!</b></span>
+	</p>
+	<p class="content">
+		Cuando estemos en el Consejo de Unidad no podemos olvidar que se representan los intereses e ideas 
+		de cada Patrulla, así que recordemos lo que conversamos y representemos las decisiones que se 
+		tomaron en conjunto. Si tenemos alguna confusión, siempre podemos consultar antes del Consejo 
+		de Unidad a quién sea Guardián/a de los Secretos o Secretario/a quien tendrá todas las anotaciones 
+		sobre lo conversado en el Consejo de Patrulla.
+	</p>
+	<p class="content">
+		Cuando ya conversamos sobre cómo está la Unidad y decidimos en qué enfocarnos, 
+		en el Consejo de Unidad vamos a <span class="importante2">armar una propuesta</span> de lo 
+		que podríamos hacer como Unidad pensando en esa idea en la que decidimos centrarnos. 
+		Esta propuesta la vamos a revisar después con nuestras Patrullas, donde podemos conversarlas, 
+		dar nuestras opiniones y sugerir cambios o también actividades adicionales a las propuestas 
+		para lograr aquello en lo que nos enfocaremos.
+	</p>
+	<p class="content">
+		Si bien en el Consejo de Unidad vamos a hablar de actividades, no hablaremos de aquellas que 
+		corresponden a la Patrulla. Esas actividades las conversaremos en el 
+		<span class="importante2">Consejo de Patrulla</span> y las decidiremos en conjunto ahí mismo, 
+		ya que participaremos de manera independiente como Patrulla y responden a nuestros intereses y 
+		no necesariamente a los de toda la Unidad.
+	</p>
+	<p class="content">
+		Una vez que ya todas las Patrullas conversaron de la propuesta, en la 
+		<span class="importante2">Asamblea de Unidad</span>, elegiremos las actividades 
+		que realizaremos como Unidad a través de un juego, el <span class="importante2">juego democrático</span>.
+	</p>
+	<p class="content">
+		En relación con este juego es el segundo consejo para guías y subguías:
+	</p>
+	<p class="content">
+		<span class="importante2"><b>¡Cuando toda la Unidad elige, las actividades resultan mejor, hay 
+		más motivación y la Unidad crece!</b>
+	</p>
+	<p class="content">		
+		Comentémosle a toda nuestra Patrulla la importancia de participar del juego democrático, así 
+		nuestra Patrulla estará completa y a través del juego elegiremos las actividades del ciclo. 
+		Lo mejor del juego democrático es que todas y todos participamos como iguales.
+	</p>
+	<p class="content">
+		Cuando ya sabemos qué actividades han sido las con mayor preferencia, nos reuniremos con 
+		el <span class="importante2">Consejo de Unidad</span> para organizar un 
+		<span class="importante2">calendario</span> que será propuesto a la Asamblea de Unidad. Habrá 
+		actividades que hacemos habitualmente y que debemos considerar en el calendario y habrá nuevas 
+		actividades que elegimos a través de los juegos democráticos o al interior de nuestras 
+		Patrullas y que también tenemos que contemplar. Entonces, el tercer consejo es:
+	</p>
+	<p class="content">
+		<span class="importante2"><b>
+		¡Pidámosle ayuda a dirigentes o guiadoras y partamos poniendo en el calendario todas esas 
+		fechas que ya están ocupadas!</b>
+	</p>
+	<p class="content">		
+		Entre más consideraciones tomemos, mejor quedará nuestro calendario. Recordemos fechas de 
+		cumpleaños, aniversarios de Patrullas, Unidades o Grupo, actividades ya planificadas por nuestro 
+		Distrito, Zona, o lugar donde realizamos nuestras actividades (como una kermese, bingo, etc) 
+		y fiestas nacionales como Fiestas Patrias o feriados. 
+	</p>
+	<p class="content">
+		Luego, presentaremos el Calendario en la Asamblea de Unidad. Ahí 
+		<span class="importante2">todas las opiniones son tomadas en cuenta</span> y se harán los 
+		cambios y mejoras necesarias. El calendario no tendrá los nombres de las actividades por 
+		Patrullas, pero si indicará los días en que se realizarán. 
+	</p>
+	<div class="intro2">
+		¡Qué comiencen las actividades!
+	</div>
+	<p class="content">
+		Una buena preparación, nos llevará a tener las mejores aventuras. Cuando ya tenemos claro el 
+		calendario, nos reuniremos con nuestra Patrulla a preparar las actividades de Patrulla con 
+		ayuda de un dirigente o guiadora. En el caso de las actividades para la Unidad, 
+		las organizaremos en el Consejo de Unidad o las organizará un equipo que hayamos creado 
+		especialmente para hacerse cargo de esa actividad, sin importar si somos de diferentes Patrullas. 
+		Para preparar bien nuestras actividades 
+		<span class="importante2">¡Lo más importante es tener claro el objetivo de la actividad!</span>
+		El objetivo en simplemente lo que buscamos obtener de la actividad, no nos compliquemos 
+		de más con objetivos rebuscados o llenos de palabras refinadas. Con el objetivo claro, 
+		nos podemos fijar en:
+		<ul class="content">
+			<li>El lugar donde la haremos: Tengamos un lugar específico, en vez de “colegio” podemos poner “sala 4”.</li>
+			<li>La duración que va a tener: Podemos también subdividir el tiempo que demorará en partes de la actividad. </li>
+			<li>Quiénes participarán: Si estamos planificando una actividad de Unidad o una de Patrulla y si esta la realizaremos con alguien más: ¿otra Unidad? ¿otro Grupo? ¿personas de la comunidad? ¿vecinos? ¿familiares? Además, consideremos cómo participaremos: ¿lo haremos en parejas? ¿en equipos? ¿en nuestras Patrullas de origen, en el caso de ser una actividad de Unidad?</li>
+			<li>Los materiales que vamos a usar: Hagamos una lista que nos permita recordar qué llevar, también podemos poner quién está a cargo de llevarlo o conseguirlo. </li>
+			<li>Las partes que tendrá la actividad: Igual que en un cuento, las actividades tienen, al menos un inicio, desarrollo y fin.</li>
+			<li>Los riesgos que podría tener y qué haremos para hacerla más segura: Los adultos o adultas que nos acompañan nos puede ayudar mucho con esta sección.</li>
+		</ul>
+	</p>
+	<p class="content">
+		Y todo lo que se nos ocurra que permita que la actividad salga lo mejor posible.
+	</p>
+	<p class="content">
+		Durante la actividad el consejo más valioso es:
+	</p>
+	<p class="content">
+		<span class="importante2"><b>
+		¡Pasémoslo bien, no nos frustremos, todo es parte de la aventura!
+		</b>
+	</p>
+	<p class="content">				
+		Somos alegres y cordiales, seámoslo en serio. Nuestras actividades son para disfrutarlas y 
+		pasarlo increíble en un ambiente de amistad. Si nos mostramos felices y capaces de reírnos 
+		de los errores, nuestra Patrulla y Unidad también podrá hacerlo.
+	</p>
+	<div class="intro2">
+		Llegó el momento de evaluar
+	</div>
+	<p class="content">
+		Si bien durante la misma actividad nos vamos a dar cuenta de aquellas cosas que resultaron 
+		un éxito o no, también <span class="importante2">evaluaremos</span> las actividades después de 
+		haberlas realizado. Si la actividad fue de Patrulla, la evaluaremos en el Consejo de 
+		Patrulla para que luego como guías y subguías de Patrulla contemos cómo nos fue y 
+		cuál fue la evaluación en el Consejo de Unidad. Para las actividades de Unidad haremos lo 
+		mismo, primero evaluamos con nuestra Patrulla y luego en el Consejo de Unidad, 
+		<span class="importante2">sacando conclusiones</span> de las apreciaciones que todas las 
+		Patrullas hayan dado. 
+	</p>
+	<p class="content">
+		La intención de que evaluemos nuestras actividades es que busquemos mejoras para próximas 
+		actividades, ideas exitosas que podrían volver a resultar, pensemos si logramos el 
+		objetivo de la actividad y si la actividad aportó a aquello en lo que queremos 
+		enfocarnos en este ciclo. <span class="importante2">¡Tengamos esto en cuenta al evaluar!</span>
+	</p>
+	<p class="content">
+		Cuando termina un ciclo vamos a evaluar todo lo que vivimos y las metas que logramos. 
+		Celebraremos cuánto hemos crecido y le diremos a quienes integran nuestras Patrullas y Unidad 
+		cuánto han mejorado. Lo ideal es que lo celebremos junto a toda la Unidad en un momento especial. 
+		Haremos un ciclo de programa cada 3 o 4 meses aproximadamente.
+	</p>
+	<p><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>&nbsp;</p>
+	</div>
+	<script>
+		configureGestures("full_content","seccion_1.html","seccion_3.html");
+	</script>
+
+</body>
+</html>
