--- a/www/seccion_0.html
+++ b/www/seccion_0.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
-    <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
+    <meta name="viewport" content="initial-scale=1, minimum-scale=1, width=device-width" />
     <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
     <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
     <!-- Good default declaration:
@@ -24,10 +24,13 @@
 </head>
 
 <body class="seccion0">
+    <script type="text/javascript" src="js/hammer.min.js"></script>
+    <script type="text/javascript" src="js/gestures.js"></script>
 	<img class="title_img" src="img/img_0.png"/>
 	<div class="intro">
 	¡Acepto el desafío!
 	</div>
+	<div id="full_content">
 	<p class="content">
 		Ser guía o subguía de Patrulla es un desafío al que nos invitan nuestros pares con quienes conformamos una Patrulla. Nos eligieron como líderes de nuestra Patrulla y en nuestro rol esperamos dar lo mejor para honrar ese voto de confianza.
 	</p>
@@ -82,6 +85,10 @@
 		<a href="mailto:scouts@guiasyscoutschile.cl?subject=Quiero%20saber%20mas" target="_blank">scouts@guiasyscoutschile.cl</a>
 	</p>
 	<p><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>&nbsp;</p>
+	</div>
+	<script>
+		configureGestures("full_content","index.html","seccion_1.html");
+	</script>
 
 </body>
 
