--- a/www/seccion_1.html
+++ b/www/seccion_1.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
-    <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
+    <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=3, minimum-scale=1, width=device-width" />
     <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
     <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
     <!-- Good default declaration:
@@ -24,10 +24,13 @@
 </head>
 
 <body class="seccion1">
+    <script type="text/javascript" src="js/hammer.min.js"></script>
+    <script type="text/javascript" src="js/gestures.js"></script>
 	<img class="title_img" src="img/img_seccion_1.png"/>
 	<div class="intro1">
 		Mi Patrulla: un equipo basado en la amistad.
 	</div>
+	<div id="full_content">
 	<p class="content">
 		Nuestras Patrullas están conformadas por un grupo de personas que unidas por la amistad hemos 
 		decidido trabajar en conjunto para lograr nuestros sueños, metas y proyectos. 
@@ -204,4 +207,10 @@
 		la diversidad, la diferencia y las oportunidades de aprender de los demás.
 	</p>
 	<p><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>&nbsp;</p>
+	</div>
+	<script>
+		configureGestures("full_content","seccion_0.html","seccion_2.html");
+	</script>
+
 </body>
+</html>
